--- a/concle_order.html
+++ b/concle_order.html
@@ -61,7 +61,7 @@
 				
 			</section>
 			<footer>
-				<input type="text" class="sum" value="提&nbsp;&nbsp;交"/>
+				<a href="pingjia.html"><input type="text" class="sum" value="提&nbsp;&nbsp;交"/></a>
 			</footer>
 		</div>
 	</body>
