--- a/dian铺评价3.2.html
+++ b/dian铺评价3.2.html
@@ -34,7 +34,7 @@
 			<header class="tou">
 			 <a href="#" class="jian"><img src="img/images/header_03.jpg"/></a>
 			 <span class="wenzi">杭州西湖子四季问肌肤十分让人关于</span>
-			 <a href=" 店铺详情_芬达.html" class="jia">+</a>
+			 <a href=" " class="jia">+</a>
 			</header>
 			<section class="conter">
 				<div class="one">
