--- a/sumbit_order.html
+++ b/sumbit_order.html
@@ -102,7 +102,7 @@
 			</section>
 			<footer>
 				<span class="dai">待支付￥7</span>
-				<a href="#"class="cheng">确认支付</a>
+				<a href="my_order.html"class="cheng">确认支付</a>
 			</footer>
 		</div>
 	</body>
