--- a/tan窗.html
+++ b/tan窗.html
@@ -114,7 +114,7 @@
 			   <span class="oo">差不多火烧赤壁</span>
 			   <div class="xia">
 			   	<a href="" class="qu">取消</a>
-			   	<a href="" class="que">确定</a>
+			   	<a href="dian铺评价3.2.html" class="que">确定</a>
 			   </div>
 			</div>
 		</div>
