--- a/wei添加购物车2.4.html
+++ b/wei添加购物车2.4.html
@@ -193,7 +193,7 @@
 				<span class="jiage">￥0.5</span>
 				<span class="jian"><img src="img/images/on_shopping_car/z_jian2.png"/></span>
 				<span class="dd">9</span>
-				<span class="jiaa"><img src="img/images/on_shopping_car/jiaaaaa3.png"/></span>
+				<span class="jiaa"><a href=" sumbit_order.html"><img src="img/images/on_shopping_car/jiaaaaa3.png"/></a></span>
 			</div>
 		</div>
 	</body>
