--- a/店铺详情_芬达.html
+++ b/店铺详情_芬达.html
@@ -41,7 +41,7 @@
 					 <span class="one_1"><img src="img/images/images/ggggg_03.png"/></span>
 					 <p class="pais">商品 22种 <a href="#"><img src="img/images/shop/baigang_07.png"/></a>起送 ￥0</p>
 					</div>
-					<span class="xing"><img src="img/images/shop/shoucang.png"/></span>
+					<span class="xing"><a href="wei添加购物车2.4.html"><img src="img/images/shop/shoucang.png"/></a></span>
 					<h2 class="day"><img src="img/images/shop/shop_header1.png"/></h2>
 				</div>
 				<div class="nav_two">
